--- a/configs/spike_yolo/spike_yolo_nano.yaml
+++ b/configs/spike_yolo/spike_yolo_nano.yaml
@@ -37,11 +37,11 @@ DATASETS:
     - name: RandomFlip
 
 SOLVER:
-  MAX_ITER: 1200000 # around 100 epochs for total_batch_size=4
-  WARMUP_ITERS: 120000 # around 10 epoch
+  MAX_ITER: 600000 # around 100 epochs for total_batch_size=4
+  WARMUP_ITERS: 60000 # around 10 epoch
   LR_SCHEDULER_NAME: WarmupCosineLR
-  BASE_LR: 1e-2
-  BASE_LR_END: 1e-3
+  BASE_LR: 1e-3
+  BASE_LR_END: 5e-4
   AMP:
     ENABLED: true
 
